# mcp-windbg

./: AGENTS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/prompts/: dump-triage-cli.prompt.md
.github/workflows/: build-and-test.yml
skills/windbg-cli/: SKILL.md
src/mcp_windbg/: __main__.py  cdb_session.py  cli.py
src/windbg_cli/: __main__.py  cli.py
src/windbg_cli/prompts/: __init__.py
src/windbg_cli/tests/: test_cdb.py  test_remote_debugging.py
