[project]
name = "windbg-cli"
version = "0.12.2"
description = "WinDbg/CDB crash dump analysis CLI tools with SKILLS for coding agents"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "davidfowl" }]
keywords = ["windbg", "cdb", "crash-analysis", "debugging", "skill"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.scripts]
windbg = "windbg_cli.cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
windbg_cli = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "twine>=6.2.0",
    "jsonschema>=4.23.0",
]

[tool.pytest.ini_options]
testpaths = ["src/windbg_cli/tests"]

[project.optional-dependencies]
test = ["pytest>=8.4.0"]
